<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/first_cons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_modern_gradient"
    android:padding="24dp"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/Image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/welcomescreenimage"
        android:background="@drawable/bg_modern_card"
        android:padding="16dp"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="4:3"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/first"
        style="@style/Fefusport.Display"
        android:layout_marginTop="20dp"
        android:text="@string/modern_welcome_title"
        app:layout_constraintTop_toBottomOf="@id/Image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/second"
        style="@style/Fefusport.Body"
        android:layout_marginTop="12dp"
        android:text="@string/modern_welcome_subtitle"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/first"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        style="@style/Fefusport.ModernButton"
        android:layout_width="match_parent"
        android:layout_marginTop="28dp"
        android:text="@string/modern_registration_action"
        app:layout_constraintTop_toBottomOf="@id/second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/text_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modern_have_account"
        android:textColor="@color/modern_primary"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

